# Foodi

./: .gitignore  DESIGN.md  README.md  REVIEW.md  SETUP.md  docker-compose.yml
backend/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  config.example.json  vcpkg.json
backend/deploy/: config.docker.json
backend/migrations/: 001_init.sql  002_seed_allergens.sql  003_add_profile_completed.sql  004_password_reset_tokens.sql  005_recipes.sql
backend/src/: main.cpp
backend/src/controllers/: .gitkeep  AllergenController.cpp  AllergenController.h  AuthController.cpp  AuthController.h  FoodController.cpp  FoodController.h  MeController.cpp  MeController.h
backend/src/filters/: .gitkeep  JwtAuthFilter.cpp  JwtAuthFilter.h
backend/src/models/: .gitkeep
backend/src/services/: .gitkeep  EmailClient.cpp  EmailClient.h  FoodIngest.cpp  FoodIngest.h  OffClient.cpp  OffClient.h  SpoonacularClient.cpp  SpoonacularClient.h
backend/src/util/: Jwt.cpp  Jwt.h  PasswordHasher.cpp  PasswordHasher.h  Responses.h  Strings.h
client/: CMakeLists.txt  CMakePresets.json
client/resources/: foodi.qrc  foodi.qss
client/src/: main.cpp
client/src/core/: Session.h
client/src/net/: ApiClient.cpp  ApiClient.h
client/src/ui/: AllergenPicker.cpp  AllergenPicker.h  Card.cpp  Card.h  FoodDetailDialog.cpp  FoodDetailDialog.h  FoodListPage.cpp  FoodListPage.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  OnboardingPage.cpp  OnboardingPage.h  ProfilePage.cpp  ProfilePage.h  Spinner.cpp  Spinner.h  StatusBadge.h  Theme.cpp  Theme.h
old version/: README.md
old version/Final Submission/: Readme.md
old version/Final Submission/source-code/: Foodi.cpp  fooditems.txt
